# muon-dev-env

./: .gitignore  Cargo.toml  README.md  package-lock.json  step0-os-funtoo-install.sh  step0-os-funtoo-update.sh  step0-os-funtoo.sh  step0-os-gentoo-install.sh  step0-os-macos-install.sh  step0-os-macos-update.sh  step0-os-ubuntu.sh  step0_build_env.sh  step0_build_env_for_ubuntu.sh  step1-lang-go-install.sh  step1-lang-go-update.sh  step1-lang-node-install.sh  step1-lang-node-update.sh  step1-lang-python-install.sh  step1-lang-python-update.sh  step1-lang-rust-install.sh  step1_rust.sh  step2-tools-go-install.sh  step2-tools-go-update.sh  step2-tools-node-install.sh  step2-tools-rust-install.sh  step2-tools-rust-update.sh  step2_starship.sh  step3-dev-flutter-install.sh  step3-dev-flutter-update.sh  step3-dev-rust-embedded-install.sh  step3-dev-rust-embedded-update.sh  step3-dev-rust-solana-install.sh  step3-dev-rust-solana-update.sh  step3-dev-rust-web-install.sh  step3-dev-rust-web-update.sh  step3_node.sh  step4_solana.sh  step5_go.sh  step6_gh-cli.sh  step7_python.sh  (+4 more)
src/: divider.rs  main.rs
src/os_packages/: gentoo.rs  mod.rs
src/probe/: mod.rs  os.rs  shell.rs
test/ubuntu/: Dockerfile
