[package]
name = "muon-dev-env"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
fake-tty = "0.3.1"
home = "0.5.9"
sys-info = "0.9.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
whoami = "1.5.2"
